--- a/static/styles/add-recipe.css
+++ b/static/styles/add-recipe.css
@@ -1,3 +1,13 @@
+.form-messages {
+  display: inline-block;
+  padding: 10px;
+  margin-left: 20px;
+  padding-left: 20px;
+  padding-right: 60px;
+  min-width: 450px;
+  visibility: hidden;
+}
+
 .form {
   padding: 10px;
   padding-left: 20px;
