--- a/templates/add-recipe.html
+++ b/templates/add-recipe.html
@@ -97,7 +97,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text" id="inputGroup-sizing-default">URL for Image</span>
                 </div>
-                <input placeholder="Use 'placeholder' if no image..." name="meal-src-url" type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
+                <input placeholder="Use 'placeholder' if no image..." name="meal-img-url" type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
               </div>
             </div>
           </div>
