--- a/templates/nav-template.html
+++ b/templates/nav-template.html
@@ -18,6 +18,7 @@
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/blog-home.css') }}">
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/recipe-search.css') }}">
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/add-recipe.css') }}">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.7.1/min/dropzone.min.css">
   <link rel="icon" href="{{ url_for('static', filename='images/h.png')}}">
   <script src='https://kit.fontawesome.com/a076d05399.js'></script>
   <!--https://www.w3schools.com/icons/fontawesome5_icons_finance.asp-->
