Fixed table click, changed validation

--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -33,8 +33,9 @@
   display: none;
 }
 .food-img {
-  height: 200px;
-  width: auto;
+  height: 150px;
+  width: 200px;
+  object-fit: cover;
 }
 
 .btn-dash {
